ENH:  Add b-spline fitting.

--- a/ants/lib/CMakeLists.txt
+++ b/ants/lib/CMakeLists.txt
@@ -47,6 +47,7 @@ pybind11_add_module(antsImageToImageMetric LOCAL_antsImageToImageMetric.cxx)
 pybind11_add_module(antsImageUtils LOCAL_antsImageUtils.cxx)
 pybind11_add_module(antsTransform LOCAL_antsTransform.cxx)
 pybind11_add_module(cropImage LOCAL_cropImage.cxx)
+pybind11_add_module(fitBsplineObjectToScatteredData LOCAL_fitBsplineObjectToScatteredData.cxx)
 pybind11_add_module(fsl2antstransform LOCAL_fsl2antstransform.cxx)
 pybind11_add_module(getNeighborhoodMatrix LOCAL_getNeighborhoodMatrix.cxx)
 pybind11_add_module(histogramMatchImage LOCAL_histogramMatchImages.cxx)
@@ -112,6 +113,7 @@ target_link_libraries(antsImageUtils PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(antsTransform PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(antsTransform PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(cropImage PRIVATE ${ITK_LIBRARIES})
+target_link_libraries(fitBsplineObjectToScatteredData PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(fsl2antstransform PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(getNeighborhoodMatrix PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(histogramMatchImage PRIVATE ${ITK_LIBRARIES})
