WIP: updating to latest itk and ants tags and resolving some issues (sort of)
removed LOCAL_invariantImageSimilarity.cxx - can be restored later if needed or better would be to reimplement with new techniques
similar for reorientImage*
removed the dimension parameter unnecessarily passed to read_transform
.... updated pybind11 and made some questionable changes therein - eg to view function in numpy.h - to resolve ambiguous function call
BUG: r* data names
FIX:  a couple failed pybind conversions in bspline scatter and label_overlap
addressed some testing issues - though viz still fails on several items that are deprecated ...
BUG: center of mass still fails .... i think.

--- a/ants/lib/CMakeLists.txt
+++ b/ants/lib/CMakeLists.txt
@@ -55,7 +55,6 @@ pybind11_add_module(fsl2antstransform LOCAL_fsl2antstransform.cxx)
 pybind11_add_module(getNeighborhoodMatrix LOCAL_getNeighborhoodMatrix.cxx)
 pybind11_add_module(hausdorffDistance LOCAL_hausdorffDistance.cxx)
 pybind11_add_module(histogramMatchImage LOCAL_histogramMatchImages.cxx)
-pybind11_add_module(invariantImageSimilarity LOCAL_invariantImageSimilarity.cxx)
 pybind11_add_module(labelOverlapMeasures LOCAL_labelOverlapMeasures.cxx)
 pybind11_add_module(labelStats LOCAL_labelStats.cxx)
 pybind11_add_module(mergeChannels LOCAL_mergeChannels.cxx)
@@ -64,7 +63,7 @@ pybind11_add_module(readImage LOCAL_readImage.cxx)
 pybind11_add_module(readTransform LOCAL_readTransform.cxx)
 pybind11_add_module(reflectionMatrix LOCAL_reflectionMatrix.cxx)
 pybind11_add_module(reorientImage LOCAL_reorientImage.cxx)
-pybind11_add_module(reorientImage2 LOCAL_reorientImage2.cxx)
+## pybind11_add_module(reorientImage2 LOCAL_reorientImage2.cxx)
 pybind11_add_module(rgbToVector LOCAL_rgbToVector.cxx)
 pybind11_add_module(sccaner LOCAL_sccaner.cxx)
 pybind11_add_module(simulateDisplacementField LOCAL_simulateDisplacementField.cxx)
@@ -128,7 +127,6 @@ target_link_libraries(fsl2antstransform PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(getNeighborhoodMatrix PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(hausdorffDistance PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(histogramMatchImage PRIVATE ${ITK_LIBRARIES})
-target_link_libraries(invariantImageSimilarity PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(labelOverlapMeasures PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(labelStats PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(mergeChannels PRIVATE ${ITK_LIBRARIES})
@@ -136,8 +134,8 @@ target_link_libraries(padImage PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(readImage PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(readTransform PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(reflectionMatrix PRIVATE ${ITK_LIBRARIES})
-target_link_libraries(reorientImage PRIVATE ${ITK_LIBRARIES})
-target_link_libraries(reorientImage2 PRIVATE ${ITK_LIBRARIES})
+## target_link_libraries(reorientImage PRIVATE ${ITK_LIBRARIES})
+## target_link_libraries(reorientImage2 PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(rgbToVector PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(sccaner PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(simulateDisplacementField PRIVATE ${ITK_LIBRARIES})
