BUG: forgot this lib

--- a/ants/lib/CMakeLists.txt
+++ b/ants/lib/CMakeLists.txt
@@ -134,7 +134,7 @@ target_link_libraries(padImage PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(readImage PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(readTransform PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(reflectionMatrix PRIVATE ${ITK_LIBRARIES})
-## target_link_libraries(reorientImage PRIVATE ${ITK_LIBRARIES})
+target_link_libraries(reorientImage PRIVATE ${ITK_LIBRARIES})
 ## target_link_libraries(reorientImage2 PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(rgbToVector PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(sccaner PRIVATE ${ITK_LIBRARIES})
