BUG: need reorient_image2 and get_center_of_mass (not surprising)

--- a/ants/lib/CMakeLists.txt
+++ b/ants/lib/CMakeLists.txt
@@ -63,7 +63,7 @@ pybind11_add_module(readImage LOCAL_readImage.cxx)
 pybind11_add_module(readTransform LOCAL_readTransform.cxx)
 pybind11_add_module(reflectionMatrix LOCAL_reflectionMatrix.cxx)
 pybind11_add_module(reorientImage LOCAL_reorientImage.cxx)
-## pybind11_add_module(reorientImage2 LOCAL_reorientImage2.cxx)
+pybind11_add_module(reorientImage2 LOCAL_reorientImage2.cxx)
 pybind11_add_module(rgbToVector LOCAL_rgbToVector.cxx)
 pybind11_add_module(sccaner LOCAL_sccaner.cxx)
 pybind11_add_module(simulateDisplacementField LOCAL_simulateDisplacementField.cxx)
@@ -135,7 +135,7 @@ target_link_libraries(readImage PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(readTransform PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(reflectionMatrix PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(reorientImage PRIVATE ${ITK_LIBRARIES})
-## target_link_libraries(reorientImage2 PRIVATE ${ITK_LIBRARIES})
+target_link_libraries(reorientImage2 PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(rgbToVector PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(sccaner PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(simulateDisplacementField PRIVATE ${ITK_LIBRARIES})
