--- a/ants/lib/CMakeLists.txt
+++ b/ants/lib/CMakeLists.txt
@@ -55,6 +55,7 @@ pybind11_add_module(fsl2antstransform LOCAL_fsl2antstransform.cxx)
 pybind11_add_module(getNeighborhoodMatrix LOCAL_getNeighborhoodMatrix.cxx)
 pybind11_add_module(hausdorffDistance LOCAL_hausdorffDistance.cxx)
 pybind11_add_module(histogramMatchImage LOCAL_histogramMatchImages.cxx)
+pybind11_add_module(invertDisplacementField LOCAL_invertDisplacementField.cxx)
 pybind11_add_module(labelOverlapMeasures LOCAL_labelOverlapMeasures.cxx)
 pybind11_add_module(labelStats LOCAL_labelStats.cxx)
 pybind11_add_module(mergeChannels LOCAL_mergeChannels.cxx)
@@ -127,6 +128,7 @@ target_link_libraries(fsl2antstransform PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(getNeighborhoodMatrix PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(hausdorffDistance PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(histogramMatchImage PRIVATE ${ITK_LIBRARIES})
+target_link_libraries(invertDisplacementField PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(labelOverlapMeasures PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(labelStats PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(mergeChannels PRIVATE ${ITK_LIBRARIES})
