ENH:  Compose fields.

--- a/ants/lib/CMakeLists.txt
+++ b/ants/lib/CMakeLists.txt
@@ -47,6 +47,7 @@ pybind11_add_module(antsImageMutualInformation LOCAL_antsImageMutualInformation.
 pybind11_add_module(antsImageToImageMetric LOCAL_antsImageToImageMetric.cxx)
 pybind11_add_module(antsImageUtils LOCAL_antsImageUtils.cxx)
 pybind11_add_module(antsTransform LOCAL_antsTransform.cxx)
+pybind11_add_module(composeDisplacementFields LOCAL_composeDisplacementFields.cxx)
 pybind11_add_module(cropImage LOCAL_cropImage.cxx)
 pybind11_add_module(fitBsplineObjectToScatteredData LOCAL_fitBsplineObjectToScatteredData.cxx)
 pybind11_add_module(fitBsplineDisplacementField LOCAL_fitBsplineDisplacementField.cxx)
@@ -120,6 +121,7 @@ target_link_libraries(antsImageToImageMetric PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(antsImageUtils PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(antsTransform PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(antsTransform PRIVATE ${ITK_LIBRARIES})
+target_link_libraries(composeDisplacementFields PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(cropImage PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(fitBsplineObjectToScatteredData PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(fitBsplineDisplacementField PRIVATE ${ITK_LIBRARIES})
