--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -12,72 +12,31 @@ jobs:
         include:
           # Windows 64-bit
           - os: windows-latest
-            python: 36
-            platform_id: win_amd64
-          - os: windows-latest
-            python: 37
-            platform_id: win_amd64
-          - os: windows-latest
-            python: 38
-            platform_id: win_amd64
-          - os: windows-latest
             python: 39
-            platform_id: win_amd64
-          - os: windows-latest
-            python: 310
             platform_id: win_amd64
 
           # Linux 64-bit
           - os: ubuntu-latest
-            python: 36
+            python: 39
+            arch: x86_64
             platform_id: manylinux_x86_64
-          - os: ubuntu-latest
-            python: 37
-            platform_id: manylinux_x86_64
-          - os: ubuntu-latest
-            python: 38
-            platform_id: manylinux_x86_64
+
+          # Linux ARM64
           - os: ubuntu-latest
             python: 39
-            platform_id: manylinux_x86_64
-          - os: ubuntu-latest
-            python: 310
-            platform_id: manylinux_x86_64
+            arch: aarch64
+            platform_id: manylinux_aarch64
 
           # macOS on Intel 64-bit
-          - os: macos-latest
-            python: 36
-            arch: x86_64
-            platform_id: macosx_x86_64
-          - os: macos-latest
-            python: 37
-            arch: x86_64
-            platform_id: macosx_x86_64
-          - os: macos-latest
-            python: 38
-            arch: x86_64
-            platform_id: macosx_x86_64
-          - os: macos-latest
+          - os: macos-11
             python: 39
-            arch: x86_64
-            platform_id: macosx_x86_64
-          - os: macos-latest
-            python: 310
             arch: x86_64
             platform_id: macosx_x86_64
 
-          # macOS on Apple M1 64-bit
-          - os: macos-latest
-            python: 38
-            arch: arm64
-            platform_id: macosx_arm64
-          - os: macos-latest
+          # macOS on Apple M1 ARM64
+          - os: macos-11
             python: 39
-            arch: arm64
-            platform_id: macosx_arm64
-          - os: macos-latest
-            python: 310
-            arch: arm64
+            arch: universal2, arm64
             platform_id: macosx_arm64
 
     steps:
@@ -96,16 +55,18 @@ jobs:
         uses: ilammy/msvc-dev-cmd@v1
 
       - name: Install cibuildwheel
-        run: python -m pip install cibuildwheel==2.3.1
+        run: python -m pip install cibuildwheel==2.11.4
 
       - name: Build wheels
         env:
           CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
           CIBW_MANYLINUX_I686_IMAGE: manylinux2014
+          CIBW_MANYLINUX_AARCH64_IMAGE: manylinux2014"
           CIBW_BUILD: cp${{ matrix.python }}-${{ matrix.platform_id }}
+          # CIBW_TEST_SKIP: *_arm64 *_universal2:arm64
 
           # Include latest Python beta
-          CIBW_PRERELEASE_PYTHONS: True
+          CIBW_PRERELEASE_PYTHONS: False
 
           CIBW_BEFORE_ALL_LINUX: |
             yum install -y gcc-c++ libpng-devel libpng
