--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -30,11 +30,13 @@ jobs:
           # macOS on Intel 64-bit and Apple M1 ARM64
           - os: macos-11
             python: 39
+            arch: x86_64
             platform_id: macosx_x86_64
 
-          # macOS on 
+          # macOS on Apple M1 ARM64
           - os: macos-11
             python: 39
+            arch: arm64
             platform_id: macosx_arm64
 
     steps:
@@ -57,9 +59,9 @@ jobs:
 
       - name: Build wheels
         env:
-          CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014_x86_64
-          CIBW_MANYLINUX_I686_IMAGE: manylinux2014_i686
-          CIBW_MANYLINUX_AARCH64_IMAGE: manylinux2014_aarch64
+          CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
+          CIBW_MANYLINUX_I686_IMAGE: manylinux2014
+          # CIBW_MANYLINUX_AARCH64_IMAGE: manylinux2014_aarch64
           CIBW_BUILD: cp${{ matrix.python }}-${{ matrix.platform_id }}
           # CIBW_TEST_SKIP: *_arm64 *_universal2:arm64
 
@@ -73,7 +75,7 @@ jobs:
           CIBW_BEFORE_ALL_WINDOWS: |
             pip install cmake ninja
 
-          CIBW_ARCHS_MACOS: universal2 x86_64 arm64
+          CIBW_ARCHS_MACOS: ${{ matrix.arch }}
           CIBW_BEFORE_ALL_MACOS: |
             pip install cmake ninja
 
