--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -68,7 +68,7 @@ jobs:
           # Include latest Python beta
           CIBW_PRERELEASE_PYTHONS: False
           
-          CIBW_ARCHS_LINUX: auto
+          CIBW_ARCHS_LINUX: ${{ matrix.arch }}
           CIBW_BEFORE_ALL_LINUX: |
             yum install -y gcc-c++ libpng-devel libpng
             pip install cmake ninja
@@ -81,7 +81,7 @@ jobs:
             pip install cmake ninja
 
           CIBW_ENVIRONMENT_MACOS: |
-            CMAKE_OSX_ARCHITECTURES=$CIBW_ARCHS_MACOS
+            CMAKE_OSX_ARCHITECTURES=${{ matrix.arch }}
 
         run: python -m cibuildwheel --output-dir wheelhouse
 
