--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -18,6 +18,8 @@ linux_x86_task:
 
   install_pre_requirements_script:
     - apt install -y python3-venv python-is-python3
+    - apt install -y build-essential libpng-devel
+    - pip install cmake ninja
   <<: *BUILD_AND_STORE_WHEELS
 
 linux_aarch64_task:
@@ -32,6 +34,8 @@ linux_aarch64_task:
 
   install_pre_requirements_script:
     - apt install -y python3-venv python-is-python3
+    - apt install -y build-essential libpng-devel
+    - pip install cmake ninja
   <<: *BUILD_AND_STORE_WHEELS
 
 windows_x86_task:
@@ -43,6 +47,8 @@ windows_x86_task:
 
   install_pre_requirements_script:
     - choco install -y --no-progress python3 --version 3.10.6
+    - choco install -y --no-progress cmake
+    - choco install -y --no-progress ninja
     - refreshenv
     - echo PATH=%PATH% >> "%CIRRUS_ENV%"
   <<: *BUILD_AND_STORE_WHEELS
@@ -55,6 +61,6 @@ macos_arm64_task:
   env:
     PATH: /opt/homebrew/opt/python@3.10/bin:$PATH
   install_pre_requirements_script:
-    - brew install python@3.10
+    - brew install python@3.10 cmake libpng ninja
     - ln -s python3 /opt/homebrew/opt/python@3.10/bin/python
   <<: *BUILD_AND_STORE_WHEELS
