--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -16,8 +16,8 @@ apt-install:
 
 
 linux_x86_task:
-  name: Build Linux x86 wheels.
-  machine:
+  name: Build Linux x86 wheels
+  docker:
     image: continuumio/miniconda3:4.12.0
   resource_class: medium
 
@@ -34,8 +34,8 @@ linux_x86_task:
 
 
 linux_aarch64_task:
-  name: Build Linux aarch64 wheels.
-  machine:
+  name: Build Linux aarch64 wheels
+  docker:
     image: continuumio/miniconda3:4.12.0
   resource_class: arm.medium
 
