--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -13,17 +13,19 @@ linux_x86_task:
     image: ubuntu:20.04
     cpu: 4
     memory: 8G
-    commands:
-     - export DEBIAN_FRONTEND=noninteractive
-     - apt-get update
-     - apt-get install -y --no-install-recommends apt-transport-https bash ca-certificates curl git gnupg software-properties-common
-     - apt-get install -y build-essential gfortran libpng-dev libblas-dev liblapack-dev
-     - wget --quiet https://repo.anaconda.com/miniconda/Miniconda3-py39_22.11.1-1-Linux-x86_64.sh && /bin/bash Miniconda3-py39_22.11.1-1-Linux-x86_64.sh -b -p /opt/conda
-     - rm -f Miniconda3-py39_22.11.1-1-Linux-x86_64.sh   
-     - export PATH=/opt/conda/bin:$PATH
-     - conda update conda
-     - conda install --yes cmake ninja && conda clean -ya
+    
+  install_pre_requirements_script::
+   - export DEBIAN_FRONTEND=noninteractive
+   - apt-get update
+   - apt-get install -y --no-install-recommends apt-transport-https bash ca-certificates curl git gnupg software-properties-common
+   - apt-get install -y build-essential gfortran libpng-dev libblas-dev liblapack-dev
+   - wget --quiet https://repo.anaconda.com/miniconda/Miniconda3-py39_22.11.1-1-Linux-x86_64.sh && /bin/bash Miniconda3-py39_22.11.1-1-Linux-x86_64.sh -b -p /opt/conda
+   - rm -f Miniconda3-py39_22.11.1-1-Linux-x86_64.sh   
+   - export PATH=/opt/conda/bin:$PATH
+   - conda update conda
+   - conda install --yes cmake ninja && conda clean -ya
   <<: *BUILD_AND_STORE_WHEELS
+
 
 linux_aarch64_task:
   name: Build Linux aarch64 wheels
@@ -31,16 +33,17 @@ linux_aarch64_task:
     image: ubuntu:20.04
     cpu: 4
     memory: 8G
-    commands:
-     - export DEBIAN_FRONTEND=noninteractive
-     - apt-get update
-     - apt-get install -y --no-install-recommends apt-transport-https bash ca-certificates curl git gnupg software-properties-common
-     - apt-get install -y build-essential gfortran libpng-dev libblas-dev liblapack-dev
-     - wget --quiet https://repo.anaconda.com/miniconda/Miniconda3-py39_22.11.1-1-Linux-x86_64.sh && /bin/bash Miniconda3-py39_22.11.1-1-Linux-x86_64.sh -b -p /opt/conda
-     - rm -f Miniconda3-py39_22.11.1-1-Linux-x86_64.sh
-     - export PATH=/opt/conda/bin:$PATH
-     - conda update conda
-     - conda install --yes cmake ninja && conda clean -ya
+    
+  install_pre_requirements_script:
+   - export DEBIAN_FRONTEND=noninteractive
+   - apt-get update
+   - apt-get install -y --no-install-recommends apt-transport-https bash ca-certificates curl git gnupg software-properties-common
+   - apt-get install -y build-essential gfortran libpng-dev libblas-dev liblapack-dev
+   - wget --quiet https://repo.anaconda.com/miniconda/Miniconda3-py39_22.11.1-1-Linux-x86_64.sh && /bin/bash Miniconda3-py39_22.11.1-1-Linux-x86_64.sh -b -p /opt/conda
+   - rm -f Miniconda3-py39_22.11.1-1-Linux-x86_64.sh
+   - export PATH=/opt/conda/bin:$PATH
+   - conda update conda
+   - conda install --yes cmake ninja && conda clean -ya
   <<: *BUILD_AND_STORE_WHEELS
 
 # windows_x86_task:
