--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -24,27 +24,28 @@ linux_x86_task:
    - export PATH=/opt/conda/bin:$PATH
    - conda update conda
    - conda install --yes cmake ninja pip && conda clean -ya
+   - which python
   <<: *BUILD_AND_STORE_WHEELS
 
 
-linux_aarch64_task:
-  name: Build Linux aarch64 wheels
-  arm_container:
-    image: ubuntu:20.04
-    cpu: 4
-    memory: 8G
+# linux_aarch64_task:
+#   name: Build Linux aarch64 wheels
+#   arm_container:
+#     image: ubuntu:20.04
+#     cpu: 4
+#     memory: 8G
     
-  install_pre_requirements_script:
-   - export DEBIAN_FRONTEND=noninteractive
-   - apt-get update
-   - apt-get install -y --no-install-recommends apt-transport-https bash ca-certificates curl git gnupg wget
-   - apt-get install -y build-essential gfortran libpng-dev libblas-dev liblapack-dev
-   - wget --quiet https://repo.anaconda.com/miniconda/Miniconda3-py39_22.11.1-1-Linux-x86_64.sh && /bin/bash Miniconda3-py39_22.11.1-1-Linux-x86_64.sh -b -p /opt/conda
-   - rm -f Miniconda3-py39_22.11.1-1-Linux-x86_64.sh
-   - export PATH=/opt/conda/bin:$PATH
-   - conda update conda
-   - conda install --yes cmake ninja pip && conda clean -ya
-  <<: *BUILD_AND_STORE_WHEELS
+#   install_pre_requirements_script:
+#    - export DEBIAN_FRONTEND=noninteractive
+#    - apt-get update
+#    - apt-get install -y --no-install-recommends apt-transport-https bash ca-certificates curl git gnupg wget
+#    - apt-get install -y build-essential gfortran libpng-dev libblas-dev liblapack-dev
+#    - wget --quiet https://repo.anaconda.com/miniconda/Miniconda3-py39_22.11.1-1-Linux-x86_64.sh && /bin/bash Miniconda3-py39_22.11.1-1-Linux-x86_64.sh -b -p /opt/conda
+#    - rm -f Miniconda3-py39_22.11.1-1-Linux-x86_64.sh
+#    - export PATH=/opt/conda/bin:$PATH
+#    - conda update conda
+#    - conda install --yes cmake ninja pip && conda clean -ya
+#   <<: *BUILD_AND_STORE_WHEELS
 
 # windows_x86_task:
 #   name: Build Windows x86 wheels.
