--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -1,90 +1,90 @@
-name: Build
+# name: Build
 
-on: [push, pull_request]
+# on: [push, pull_request]
 
-jobs:
-  build_wheels:
-    name: Build wheel for cp${{ matrix.python }}-${{ matrix.platform_id }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-          # Windows 64-bit
-          - os: windows-latest
-            python: 39
-            platform_id: win_amd64
+# jobs:
+#   build_wheels:
+#     name: Build wheel for cp${{ matrix.python }}-${{ matrix.platform_id }}
+#     runs-on: ${{ matrix.os }}
+#     strategy:
+#       fail-fast: false
+#       matrix:
+#         include:
+#           # Windows 64-bit
+#           - os: windows-latest
+#             python: 39
+#             platform_id: win_amd64
 
-          # Linux 64-bit
-          - os: ubuntu-latest
-            python: 39
-            arch: x86_64
-            platform_id: manylinux_x86_64
+#           # Linux 64-bit
+#           - os: ubuntu-latest
+#             python: 39
+#             arch: x86_64
+#             platform_id: manylinux_x86_64
 
-          # Linux ARM64
-          - os: ubuntu-latest
-            python: 39
-            arch: aarch64
-            platform_id: manylinux_aarch64
+#           # Linux ARM64
+#           - os: ubuntu-latest
+#             python: 39
+#             arch: aarch64
+#             platform_id: manylinux_aarch64
 
-          # macOS on Intel 64-bit
-          - os: macos-11
-            python: 39
-            arch: x86_64
-            platform_id: macosx_x86_64
+#           # macOS on Intel 64-bit
+#           - os: macos-11
+#             python: 39
+#             arch: x86_64
+#             platform_id: macosx_x86_64
 
-          # macOS on Apple M1 ARM64
-          - os: macos-11
-            python: 39
-            arch: arm64
-            platform_id: macosx_arm64
+#           # macOS on Apple M1 ARM64
+#           - os: macos-11
+#             python: 39
+#             arch: arm64
+#             platform_id: macosx_arm64
 
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          submodules: true
+#     steps:
+#       - uses: actions/checkout@v2
+#         with:
+#           submodules: true
 
-      - uses: actions/setup-python@v2
-        name: Install Python host for cibuildwheel
-        with:
-          python-version: '3.9'
+#       - uses: actions/setup-python@v2
+#         name: Install Python host for cibuildwheel
+#         with:
+#           python-version: '3.9'
 
-        # Visual Studio
-      - name: Set up MSVC x64
-        if: matrix.platform_id == 'win_amd64'
-        uses: ilammy/msvc-dev-cmd@v1
+#         # Visual Studio
+#       - name: Set up MSVC x64
+#         if: matrix.platform_id == 'win_amd64'
+#         uses: ilammy/msvc-dev-cmd@v1
 
-      - name: Install cibuildwheel
-        run: python -m pip install cibuildwheel==2.11.4
+#       - name: Install cibuildwheel
+#         run: python -m pip install cibuildwheel==2.11.4
 
-      - name: Build wheels
-        env:
-          CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
-          # CIBW_MANYLINUX_I686_IMAGE: manylinux2014
-          CIBW_MANYLINUX_AARCH64_IMAGE: manylinux2014
-          CIBW_BUILD: cp${{ matrix.python }}-${{ matrix.platform_id }}
-          # CIBW_TEST_SKIP: *_arm64 *_universal2:arm64
+#       - name: Build wheels
+#         env:
+#           CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
+#           # CIBW_MANYLINUX_I686_IMAGE: manylinux2014
+#           CIBW_MANYLINUX_AARCH64_IMAGE: manylinux2014
+#           CIBW_BUILD: cp${{ matrix.python }}-${{ matrix.platform_id }}
+#           # CIBW_TEST_SKIP: *_arm64 *_universal2:arm64
 
-          # Include latest Python beta
-          CIBW_PRERELEASE_PYTHONS: False
+#           # Include latest Python beta
+#           CIBW_PRERELEASE_PYTHONS: False
           
-          CIBW_ARCHS_LINUX: ${{ matrix.arch }}
-          CIBW_BEFORE_ALL_LINUX: |
-            yum install -y gcc-c++ libpng-devel libpng
-            pip install cmake ninja
+#           CIBW_ARCHS_LINUX: ${{ matrix.arch }}
+#           CIBW_BEFORE_ALL_LINUX: |
+#             yum install -y gcc-c++ libpng-devel libpng
+#             pip install cmake ninja
 
-          CIBW_BEFORE_ALL_WINDOWS: |
-            pip install cmake ninja
+#           CIBW_BEFORE_ALL_WINDOWS: |
+#             pip install cmake ninja
 
-          CIBW_ARCHS_MACOS: ${{ matrix.arch }}
-          CIBW_BEFORE_ALL_MACOS: |
-            pip install cmake ninja
+#           CIBW_ARCHS_MACOS: ${{ matrix.arch }}
+#           CIBW_BEFORE_ALL_MACOS: |
+#             pip install cmake ninja
 
-          CIBW_ENVIRONMENT_MACOS: |
-            CMAKE_OSX_ARCHITECTURES=${{ matrix.arch }}
+#           CIBW_ENVIRONMENT_MACOS: |
+#             CMAKE_OSX_ARCHITECTURES=${{ matrix.arch }}
 
-        run: python -m cibuildwheel --output-dir wheelhouse
+#         run: python -m cibuildwheel --output-dir wheelhouse
 
-      - uses: actions/upload-artifact@v2
-        with:
-          path: ./wheelhouse/*.whl
+#       - uses: actions/upload-artifact@v2
+#         with:
+#           path: ./wheelhouse/*.whl
