--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,5 +1,6 @@
 build_and_store_wheels: &BUILD_AND_STORE_WHEELS
   install_cibuildwheel_script:
+    - export PATH=/opt/conda/bin:$PATH
     - python -m pip install cibuildwheel==2.11.4
   run_cibuildwheel_script:
     - cibuildwheel
