--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -9,14 +9,17 @@ build_and_store_wheels: &BUILD_AND_STORE_WHEELS
 
 linux_x86_task:
   name: Build Linux x86 wheels
-  container:
-    image: python:3.9-slim-bullseye
+  compute_engine_instance:
+    image_project: cirrus-images
+    image: family/docker-builder
+    platform: linux
     cpu: 4
     memory: 8G
     
   install_pre_requirements_script:
    - export DEBIAN_FRONTEND=noninteractive
    - apt-get update
+   - apt install -y python3-venv python-is-python3
    - apt-get install -y --no-install-recommends apt-transport-https bash ca-certificates curl git gnupg wget
    - apt-get install -y build-essential gfortran libpng-dev libblas-dev liblapack-dev
    - which python
