--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -15,6 +15,7 @@ linux_x86_task:
     CIBW_BEFORE_ALL_LINUX: |
       yum install -y gcc-c++ libpng-devel libpng
       pip install cmake ninja
+    CIBW_BUILD_VERBOSITY: 3
   compute_engine_instance:
     image_project: cirrus-images
     image: family/docker-builder
