increase timeout to 2 hours

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -9,6 +9,7 @@ build_and_store_wheels: &BUILD_AND_STORE_WHEELS
 
 linux_x86_task:
   name: Build Linux x86 wheels
+  timeout_in: 120m
   env:
     CIBW_BUILD: "cp3[6,7,8,9,10,11]-manylinux*"
     CIBW_MANYLINUX_X86_64_IMAGE: dockcross/manylinux_2_28-x64:latest
@@ -31,6 +32,7 @@ linux_x86_task:
 
 linux_aarch64_task:
   name: Build Linux aarch64 wheels
+  timeout_in: 120m
   env:
     CIBW_BUILD: "cp3[6,7,8,9,10,11]-manylinux*"
     CIBW_MANYLINUX_AARCH64_IMAGE: quay.io/pypa/manylinux_2_28_aarch64:latest
