--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -17,6 +17,7 @@ linux_x86_task:
       yum install -y gcc-c++ libpng-devel libpng
       pip install cmake ninja
     CIBW_BUILD_VERBOSITY: 3
+    CIBW_ENVIRONMENT: PIP_GLOBAL_OPTION="build_ext -j4"
   compute_engine_instance:
     image_project: cirrus-images
     image: family/docker-builder
@@ -40,6 +41,7 @@ linux_aarch64_task:
       yum install -y gcc-c++ libpng-devel libpng
       pip install cmake ninja
     CIBW_BUILD_VERBOSITY: 3
+    CIBW_ENVIRONMENT: PIP_GLOBAL_OPTION="build_ext -j4"
   compute_engine_instance:
     image_project: cirrus-images
     image: family/docker-builder-arm64
@@ -52,3 +54,5 @@ linux_aarch64_task:
    - apt-get update
    - apt-get install -y python3-dev python-is-python3
   <<: *BUILD_AND_STORE_WHEELS
+
+
