--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -13,8 +13,9 @@ linux_x86_task:
   env:
     matrix:
       - CIBW_BUILD: "cp39-manylinux*"
-      - CIBW_BUILD: "cp310-manylinux*"    
+      - CIBW_BUILD: "cp310-manylinux*"
     CIBW_MANYLINUX_X86_64_IMAGE: dockcross/manylinux_2_28-x64:latest
+    CIBW_ARCHS_LINUX: "auto64"
     CIBW_BEFORE_ALL_LINUX: |
       yum install -y gcc-c++ libpng-devel libpng
       pip install cmake ninja
@@ -39,7 +40,8 @@ linux_aarch64_task:
   env:
     matrix:
       - CIBW_BUILD: "cp39-manylinux*"
-      - CIBW_BUILD: "cp310-manylinux*" 
+      - CIBW_BUILD: "cp310-manylinux*"
+    CIBW_ARCHS_LINUX: "auto"
     CIBW_MANYLINUX_AARCH64_IMAGE: quay.io/pypa/manylinux_2_28_aarch64:latest
     CIBW_BEFORE_ALL_LINUX: |
       yum install -y gcc-c++ libpng-devel libpng
