--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -18,7 +18,7 @@ linux_x86_task:
       - CIBW_BUILD: "cp39-manylinux*"
       - CIBW_BUILD: "cp310-manylinux*"
       - CIBW_BUILD: "cp311-manylinux*"
-    CIBW_MANYLINUX_X86_64_IMAGE: dockcross/manylinux_2_28-x64:latest
+    CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014_x86_64
     CIBW_ARCHS_LINUX: "auto64"
     CIBW_BEFORE_ALL_LINUX: |
       yum install -y gcc-c++ libpng-devel libpng
@@ -50,7 +50,7 @@ linux_aarch64_task:
       - CIBW_BUILD: "cp310-manylinux*"
       - CIBW_BUILD: "cp311-manylinux*"
     CIBW_ARCHS_LINUX: "auto"
-    CIBW_MANYLINUX_AARCH64_IMAGE: quay.io/pypa/manylinux_2_28_aarch64:latest
+    CIBW_MANYLINUX_AARCH64_IMAGE: manylinux2014_aarch64
     CIBW_BEFORE_ALL_LINUX: |
       yum install -y gcc-c++ libpng-devel libpng
       pip install cmake ninja
