--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -12,11 +12,11 @@ linux_x86_task:
   timeout_in: 120m
   env:
     matrix:
-      - CIBW_BUILD: "cp36-manylinux*"
-      - CIBW_BUILD: "cp37-manylinux*"
-      - CIBW_BUILD: "cp38-manylinux*"
-      - CIBW_BUILD: "cp39-manylinux*"
-      - CIBW_BUILD: "cp310-manylinux*"
+      # - CIBW_BUILD: "cp36-manylinux*"
+      # - CIBW_BUILD: "cp37-manylinux*"
+      # - CIBW_BUILD: "cp38-manylinux*"
+      # - CIBW_BUILD: "cp39-manylinux*"
+      # - CIBW_BUILD: "cp310-manylinux*"
       - CIBW_BUILD: "cp311-manylinux*"
     CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
     CIBW_ARCHS_LINUX: "auto64"
@@ -43,11 +43,11 @@ linux_aarch64_task:
   timeout_in: 120m
   env:
     matrix:
-      - CIBW_BUILD: "cp36-manylinux*"
-      - CIBW_BUILD: "cp37-manylinux*"
-      - CIBW_BUILD: "cp38-manylinux*"
-      - CIBW_BUILD: "cp39-manylinux*"
-      - CIBW_BUILD: "cp310-manylinux*"
+      # - CIBW_BUILD: "cp36-manylinux*"
+      # - CIBW_BUILD: "cp37-manylinux*"
+      # - CIBW_BUILD: "cp38-manylinux*"
+      # - CIBW_BUILD: "cp39-manylinux*"
+      # - CIBW_BUILD: "cp310-manylinux*"
       - CIBW_BUILD: "cp311-manylinux*"
     CIBW_ARCHS_LINUX: "auto"
     CIBW_MANYLINUX_AARCH64_IMAGE: manylinux2014
