test fix #2 for missing `setuptools`

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -22,7 +22,7 @@ linux_x86_task:
     CIBW_ARCHS_LINUX: "auto64"
     CIBW_BEFORE_ALL_LINUX: |
       yum install -y gcc-c++ libpng-devel libpng
-      pip install cmake ninja
+      python -m pip install cmake ninja setuptools
     CIBW_BUILD_VERBOSITY: 3
     # CIBW_ENVIRONMENT: PIP_GLOBAL_OPTION="build_ext -j4"
   compute_engine_instance:
@@ -53,7 +53,7 @@ linux_aarch64_task:
     CIBW_MANYLINUX_AARCH64_IMAGE: manylinux2014
     CIBW_BEFORE_ALL_LINUX: |
       yum install -y gcc-c++ libpng-devel libpng
-      pip install cmake ninja
+      python -m pip install cmake ninja setuptools
     CIBW_BUILD_VERBOSITY: 3
     # CIBW_ENVIRONMENT: PIP_GLOBAL_OPTION="build_ext -j4"
   compute_engine_instance:
