--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -8,21 +8,24 @@ build_and_store_wheels: &BUILD_AND_STORE_WHEELS
 
 
 linux_x86_wheels:
-  name: Build Linux x86 wheels
+  name: Build Linux x86_64 wheels
   timeout_in: 120m
   env:
     matrix:
-      - CIBW_BUILD: "cp36-manylinux*"
-      - CIBW_BUILD: "cp37-manylinux*"
-      - CIBW_BUILD: "cp38-manylinux*"
+      # - CIBW_BUILD: "cp36-manylinux*"
+      # - CIBW_BUILD: "cp37-manylinux*"
+      # - CIBW_BUILD: "cp38-manylinux*"
       - CIBW_BUILD: "cp39-manylinux*"
-      - CIBW_BUILD: "cp310-manylinux*"
+      # - CIBW_BUILD: "cp310-manylinux*"
     CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
     CIBW_ARCHS_LINUX: "auto64"
     CIBW_BEFORE_ALL_LINUX: |
       yum install -y gcc-c++ libpng-devel libpng
       python -m pip install cmake ninja
     CIBW_BUILD_VERBOSITY: 3
+    CIBW_BEFORE_TEST: >
+      python -m pip install --find-links=wheelhouse/ -r requirements.txt
+    CIBW_TEST_COMMAND: ./tests/run_tests.sh
     # CIBW_ENVIRONMENT: PIP_GLOBAL_OPTION="build_ext -j4"
   compute_engine_instance:
     image_project: cirrus-images
@@ -42,17 +45,20 @@ linux_aarch64_wheels:
   timeout_in: 120m
   env:
     matrix:
-      - CIBW_BUILD: "cp36-manylinux*"
-      - CIBW_BUILD: "cp37-manylinux*"
-      - CIBW_BUILD: "cp38-manylinux*"
+      # - CIBW_BUILD: "cp36-manylinux*"
+      # - CIBW_BUILD: "cp37-manylinux*"
+      # - CIBW_BUILD: "cp38-manylinux*"
       - CIBW_BUILD: "cp39-manylinux*"
-      - CIBW_BUILD: "cp310-manylinux*"
+      # - CIBW_BUILD: "cp310-manylinux*"
     CIBW_ARCHS_LINUX: "auto"
     CIBW_MANYLINUX_AARCH64_IMAGE: manylinux2014
     CIBW_BEFORE_ALL_LINUX: |
       yum install -y gcc-c++ libpng-devel libpng
       python -m pip install cmake ninja
     CIBW_BUILD_VERBOSITY: 3
+    CIBW_BEFORE_TEST: >
+      python -m pip install --find-links=wheelhouse/ -r requirements.txt
+    CIBW_TEST_COMMAND: ./tests/run_tests.sh
     # CIBW_ENVIRONMENT: PIP_GLOBAL_OPTION="build_ext -j4"
   compute_engine_instance:
     image_project: cirrus-images
