--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -16,7 +16,7 @@ linux_x86_wheels:
       # - CIBW_BUILD: "cp37-manylinux*"
       # - CIBW_BUILD: "cp38-manylinux*"
       - CIBW_BUILD: "cp39-manylinux*"
-      # - CIBW_BUILD: "cp310-manylinux*"
+      - CIBW_BUILD: "cp310-manylinux*"
     CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
     CIBW_ARCHS_LINUX: "auto64"
     CIBW_BEFORE_ALL_LINUX: |
@@ -49,7 +49,7 @@ linux_aarch64_wheels:
       # - CIBW_BUILD: "cp37-manylinux*"
       # - CIBW_BUILD: "cp38-manylinux*"
       - CIBW_BUILD: "cp39-manylinux*"
-      # - CIBW_BUILD: "cp310-manylinux*"
+      - CIBW_BUILD: "cp310-manylinux*"
     CIBW_ARCHS_LINUX: "auto"
     CIBW_MANYLINUX_AARCH64_IMAGE: manylinux2014
     CIBW_BEFORE_ALL_LINUX: |
